# kosha

./: .gitignore  CHANGELOG.md  README.md  SKILL-commonmark.md  SKILL.html  cli.html  cli.html.md  core.html  core.html.md  graph.html  graph.html.md  index.html  index.html.md  mcp.html  mcp.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml  skill.html  skill.html.md
eval/: bench.py  queries.py
karma/: SKILL.md  __init__.py  _modidx.py  core.py  graph.py
kosha/: SKILL.md  __init__.py  _modidx.py  bench.py  cli.py  core.py  graph.py  mcp.py  rank.py  report.py  skill.py
nbs/: 00_core.ipynb  01_graph.ipynb  02_cli.ipynb  02_rank.ipynb  02_skill.ipynb  03_cli.ipynb  03_report.ipynb  04_mcp.ipynb  05_bench.ipynb  SKILL.md  index.ipynb  nbdev.yml  sidebar.yml
