[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koshas"
dynamic = ["version"]
description = "kosha (कोश) — a treasury of your repo and environment context for coding agents. FTS5 + vector search + call graph, no LLMs required."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Karthik", email = "karthik.rajgopal@hotmail.com"}]
keywords = ['repo-context','nbdev','devtool','code graph','code search']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastprogress>=1.1.5",
    "litesearch>=0.0.22",
    "pyan3>=2.4.3",
    "watchfiles>=1.1.1",
    "networkx>=3.0",
]

[project.optional-dependencies]
community = ["python-louvain>=0.16"]
ignore = ["pathspec>=0.12"]
kernel = ["clikernel>=0.1"]

[project.scripts]
kosha = "kosha.cli:main"

[project.urls]
Repository = "https://github.com/vedicreader/kosha"
Documentation = "https://vedicreader.github.io/kosha/"

[project.entry-points.nbdev]
kosha = "kosha._modidx:d"

[tool.hatch.version]
path = "kosha/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["kosha"]

[tool.hatch.build.targets.sdist]
include = ["/kosha", "/pyproject.toml", "/README.md"]

[tool.nbdev]
lib_name = "kosha"
lib_path = "kosha"

[dependency-groups]
dev = [
    "nbdev>=3.0.15",
    "notebook>=7.5.5",
    "python-louvain>=0.16",
    "pathspec>=0.12",
]
